# gsfpy

./: .coveragerc  .gitattributes  .gitignore  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  liccheck.ini  pyproject.toml  pytest  python  requirements-dev.txt  setup.cfg  setup.py  strategy.ini  tox.ini
.dependabot/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
gsfpy/: GSF_POSITION.py  GSF_POSITION_OFFSETS.py  __init__.py  bindings.py  constants.py  enums.py  gsfAttitude.py  gsfBRBIntensity.py  gsfComment.py  gsfDataID.py  gsfHVNavigationError.py  gsfHeader.py  gsfHistory.py  gsfMBOffsets.py  gsfMBParams.py  gsfNavigationError.py  gsfProcessingParameters.py  gsfRecords.py  gsfSBSensorSpecific.py  gsfSVP.py  gsfScaleFactors.py  gsfSensorParameters.py  gsfSensorSpecific.py  gsfSingleBeamPing.py  gsfSwathBathyPing.py  gsfSwathBathySummary.py  timespec.py
gsfpy3_08/: __init__.py  bindings.py  gsfBRBIntensity.py  gsfComment.py  gsfHVNavigationError.py  gsfHistory.py  gsfMBOffsets.py  gsfMBParams.py  gsfNavigationError.py  gsfProcessingParameters.py  gsfRecords.py  gsfSBSensorSpecific.py  gsfSensorParameters.py  gsfSensorSpecific.py  gsfSwathBathyPing.py  gsfSwathBathySummary.py  timespec.py
gsfpy3_09/: GSF_POSITION.py  GSF_POSITION_OFFSETS.py  __init__.py  bindings.py  constants.py  enums.py  gsfAttitude.py  gsfBRBIntensity.py  gsfDataID.py  gsfScaleFactors.py  gsfSensorSpecific.py  gsfSwathBathyPing.py
tests/: __init__.py  bindings_test.py  conftest.py  gsfpy_test.py  gsfpy_test_data.gsf  test_bindings.py  test_gsf_swathbathyping.py  (+12 more)
(+34 files in other folders)
