[tool.poetry]
name = "gsfpy"
version = "2.0.0"
authors = [
    "UK Hydrographic Office <datascienceandengineering@ukho.gov.uk>"
]
description = "Python wrapper for the C implementation of the Generic Sensor Format library."
license = "MIT"
keywords = [
    "bathymetry",
    "gsf",
    "libgsf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

homepage = "https://github.com/UKHO/gsfpy"
repository = "https://github.com/UKHO/gsfpy"

readme = "README.md"

packages = [
    { include = "gsfpy" },
    { include = "gsfpy3_08" },
    { include = "gsfpy3_09" },
]

# Do not manually edit, use poetry add/remove (--dev) to manage dependencies
[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
assertpy = "^1.0"
bandit = "^1.7.1"
black = "^19.10b0"
bump2version = "^1.0.0"
coverage = "^6.1"
flake8 = "^4.0.1"
liccheck = "^0.6.2"
pytest-cov = "^3.0.0"
pytest-runner = "^5.3"
pytest = "^6.2.5"
tox-gh-actions = "^2.8.1"
tox = "^3.24.4"
toml = "^0.10.1"
immutabledict = "^2.2.1"
mypy = "^0.782"
pytest-cases = "^3.6.5"
dataclasses = {version = "^0.8", python = ">=3.6,<3.7"}
pytest-mock = "^3.1.1"
isort = "^5.8.0"

[tool.pytest.ini_options]
addopts = "--cov=gsfpy --cov-fail-under=95"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
